Remplacer le contenu de main par celui de dev tout en conservant l'historique